[package]
name = "des-resident"
description = "Resident process that starts and stops stubs."
version = "0.1.0"
authors = ["tvladyslav <ykp@protonmail.ch>"]
edition = "2018"
license = "GPL v3"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2"
num-derive = "0.3"
sha2 = "0.10.6"

[dependencies.windows]
version = "0.44.0"
features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_LibraryLoader",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
]