[package]
name = "des-resident"
description = "Resident process that starts and stops stubs."
version = "1.2.1"
authors = ["tvladyslav <ykp@protonmail.ch>"]
edition = "2018"
repository = "https://github.com/tvladyslav/des/"
license = "GPL v3"
build = "build.rs"

[features]
user_current = []
user_all = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2"
num-derive = "0.3"
sha2 = "0.10.6"
cfg-if = "1.0.0"

[dependencies.windows]
version = "0.44.0"
features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_Security",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_LibraryLoader",
    "Win32_System_Registry",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
]