[package]
name = "des-stub"
description = "Dummy process that do nothing."
version = "0.1.0"
authors = ["crypto-universe <ykp@protonmail.ch>"]
edition = "2018"
license = "GPL v3"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
utf16_lit = "2.0.2"

[dependencies.windows]
version = "0.29"
features = [
    "alloc",
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
]