[package]
name = "des-stub"
description = "Dummy process that does nothing."
version = "0.1.0"
authors = ["tvladyslav <ykp@protonmail.ch>"]
edition = "2018"
license = "GPL v3"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.windows]
version = "0.44.0"
features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
]